[package]
name = "Overlord"
version = "0.1.0"
edition = "2024"
exclude = ["assets"]

[dependencies]
bevy = "0.15.3"
bevy_ecs_tilemap = "0.15.0"
ldtk_rust = "0.6.0"
log = { version = "*", features = [
    "max_level_debug",
    "release_max_level_warn",
] }
serde_json = "1.0.140"
thiserror = "2.0.12"
tiled = { version = "0.11.0", default-features = false }

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

# Enable more optimization in the release profile at the cost of compile time.
[profile.release]
panic = "abort"
# Compile the entire crate as one unit.
# Slows compile times, marginal improvements.
codegen-units = 1
# Do a second optimization pass over the entire program, including dependencies.
# Slows compile times, marginal improvements.
lto = "thin"
strip = true

# Optimize for size in the wasm-release profile to reduce load times and bandwidth usage on web.
[profile.wasm-release]
# Default to release profile values.
inherits = "release"
# Optimize with size in mind (also try "z", sometimes it is better).
# Slightly slows compile times, great improvements to file size and runtime performance.
opt-level = "s"
# Strip all debugging information from the binary to slightly reduce file size.
strip = "debuginfo"
